--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-.vscode
-#styles
-*.css
-*.css.map
+.next
 
 # dependencies
 /node_modules
