--- a/package.json
+++ b/package.json
@@ -2,28 +2,19 @@
   "name": "schedule",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://JGQH.github.io/Schedule-JS",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.1",
+    "next": "^11.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "web-vitals": "^1.1.0"
+    "react-dom": "^17.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -39,6 +30,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "sass": "^1.35.1"
   }
 }
