Moves files to please NextJS
- Moves files to a lib folder due to not being pages
- Adds gitignore for out file (From 'export' command)

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,6 +11,13 @@
             ],
             "@Utilities/*":[
                 "utilities/*"
+            ],
+            "@Library/*":[
+                "lib/blocksCreate/*",
+                "lib/classes/*",
+                "lib/generateSelector/*",
+                "lib/generateViewer/*",
+                "lib/index/*"
             ]
         }
     }
